--- a/buildspec.yml
+++ b/buildspec.yml
@@ -12,7 +12,7 @@ phases:
   build:
     commands:
       - echo Build started on `date`
-      - mvn package shade:shade
+      - mvn clean package shade:shade
       - mv target/wecky-notify-1.0.jar .
       - unzip wecky-notify-1.0.jar
       - rm -rf target tst src buildspec.yml pom.xml wecky-notify-1.0.jar
