--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,11 @@
             <artifactId>logback-classic</artifactId>
             <version>1.2.3</version>
         </dependency>
+        <dependency>
+            <groupId>com.amazonaws</groupId>
+            <artifactId>aws-java-sdk-ses</artifactId>
+            <version>1.11.346</version>
+        </dependency>
 
         <dependency>
             <groupId>com.amazonaws.serverless</groupId>
