Set function name explicitly in template.yml

--- a/template.yml
+++ b/template.yml
@@ -21,6 +21,7 @@ Resources:
   TriggerNotification:
     Type: AWS::Serverless::Function
     Properties:
+      FunctionName: Wecky-NotifyUser
       Handler: de.smartsquare.wecky.NotificationHandler
       Runtime: java8
       Role:
