Increased timeout in template.yml

--- a/template.yml
+++ b/template.yml
@@ -24,6 +24,7 @@ Resources:
       FunctionName: Wecky-NotifyUser
       Handler: de.smartsquare.wecky.NotificationHandler
       Runtime: java8
+      Timeout: 180
       Role:
         Fn::ImportValue:
           !Join ['-', [!Ref 'ProjectId', !Ref 'AWS::Region', 'LambdaTrustRole']]
