Set parameter MemorySize = 512

--- a/template.yml
+++ b/template.yml
@@ -25,6 +25,7 @@ Resources:
       Handler: de.smartsquare.wecky.NotificationHandler
       Runtime: java8
       Timeout: 180
+      MemorySize: 512
       Role:
         Fn::ImportValue:
           !Join ['-', [!Ref 'ProjectId', !Ref 'AWS::Region', 'LambdaTrustRole']]
