--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,11 @@
             <artifactId>aws-java-sdk-ses</artifactId>
             <version>1.11.346</version>
         </dependency>
+        <dependency>
+            <groupId>com.amazonaws</groupId>
+            <artifactId>aws-lambda-java-events</artifactId>
+            <version>2.2.2</version>
+        </dependency>
 
         <dependency>
             <groupId>com.amazonaws.serverless</groupId>
