end2end test with localstack

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -8,11 +8,11 @@ phases:
   pre_build:
     commands:
       - echo Test started on `date`
-      - mvn clean compile test
+      - mvn clean compile test -DargLine="-Dci-server=true"
   build:
     commands:
       - echo Build started on `date`
-      - mvn clean package shade:shade
+      - mvn clean package -DargLine="-Dci-server=true"
       - mv target/wecky-notify-1.0.jar .
       - unzip wecky-notify-1.0.jar
       - rm -rf target tst src buildspec.yml pom.xml wecky-notify-1.0.jar
