--- a/template.yml
+++ b/template.yml
@@ -13,5 +13,7 @@ Resources:
         UploadedScreenshot:
           Type: S3
           Properties:
-            Bucket: !Ref wecky-screens
+            Bucket: !Ref WeckyScreens
             Events: s3:ObjectCreated:*
+  WeckyScreens:
+    Type: AWS::S3::Bucket
